k8s/namespaces/development/llamacpp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llamacpp-model
  namespace: development
  labels:
    app.kubernetes.io/name: llamacpp-model
spec:
  ports:
  - name: llamacpp-model
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: llamacpp-model
  sessionAffinity: None
  type: ClusterIP
