k8s/namespaces/development/llamacpp/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llamacpp-model
  namespace: development
  labels:
    app.kubernetes.io/name: llamacpp-model
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: llamacpp-model
      app.kubernetes.io/managed-by: flux
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress
      ports:
        - port: 8000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: development
      ports:
        - port: 8000
          protocol: TCP
  egress:
    - {}
